--- a/README
+++ b/README
@@ -26,23 +26,28 @@ Follow the following steps:
 
       Create file ~/clang-llvm/llvm/tools/clang/tools/extra/partecl-codegen/CMakeLists.txt and add the following:
 
-        set(LLVM_LINK_COMPONENTS
-          Support
-          )
-        
-        add_clang_executable(partecl-codegen
-          src/Main.cpp
-          src/KernelGenerator.cpp
-          src/KernelGenerator.h
-          src/Utils.cpp
-          src/Utils.h)
-        
-        target_link_libraries(partecl-codegen
-          clangAST
-          clangASTMatchers
-          clangBasic
-          clangFrontend
-          clangTooling)
+      set(LLVM_LINK_COMPONENTS
+        Support
+        )
+              
+      add_clang_executable(partecl-codegen
+        src/ConfigParser.cpp
+        src/ConfigParser.h
+        src/Constants.h
+        src/CpuCodeGenerator.cpp
+        src/CpuCodeGenerator.h
+        src/Main.cpp
+        src/KernelGenerator.cpp
+        src/KernelGenerator.h
+        src/Utils.cpp
+        src/Utils.h)
+              
+      target_link_libraries(partecl-codegen
+        clangAST
+        clangASTMatchers
+        clangBasic
+        clangFrontend
+        clangTooling)
 
   3.) You can now build ParTeCL-CodeGen:
 
@@ -53,7 +58,7 @@ Follow the following steps:
 III. How to run:
 ----------------
 
-  ~/clang-llvm/build/bin/partecl-codegen [source filenames] -- [config filename] [output directory]
+  ~/clang-llvm/build/bin/partecl-codegen [source filenames] -config [config filename] -output [output directory] --
 
 Compulsory arguments:
   [source filenames]    names of the source files of the tested C program
@@ -61,7 +66,7 @@ Compulsory arguments:
   [output directory]    path to the output directory, where the generated files should be stored
 
 Example:
-  ~/clang-llvm/build/bin/partecl-codegen add.c -- add.config ~/partecl-runtime/kernel-gen
+  ~/clang-llvm/build/bin/partecl-codegen add.c -config add.config -output ~/partecl-runtime/kernel-gen
 
 
 IV. Configuration file:
